--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+pytest==5.4.1
 html5lib==1.0.1
 loguru==0.4.1
 lxml==4.5.0
 pandas==1.0.1
-requests==2.22.0
+requests==2.23.0
 responses==0.10.12
 beautifulsoup4==4.8.2
 bs4==0.0.1
