--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-pytest==5.4.1
+beautifulsoup4==4.8.2
+bs4==0.0.1
+dash==1.9.1
+flask==1.1.1
+flask_caching==1.8.0
 html5lib==1.0.1
 loguru==0.4.1
 lxml==4.5.0
-pandas==1.0.1
-xlrd==1.2.0
+pandas==1.0.3
+plotly==4.5.4
+pytest==5.4.1
 requests==2.23.0
 responses==0.10.12
-beautifulsoup4==4.8.2
-bs4==0.0.1
+xlrd==1.2.0
